# spotify-token-swap-refresh

./: .editorconfig  .ghci  .gitignore  .stylish.yaml  LICENSE  README.md  docker-compose.yml  spotify-token-swap-refresh.cabal  stack.yaml
app/: AppConfig.hs  Main.hs
nginx/: nginx.conf
src/: Config.hs  Spotify.hs  Utils.hs
src/Spotify/: API.hs  Types.hs
test/: Spec.hs
